WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220119
[Media in GPU Process][MSE] Media element does not fire "resize" event
https://bugs.webkit.org/show_bug.cgi?id=220119
Summary
[Media in GPU Process][MSE] Media element does not fire "resize" event
Peng Liu
Reported
2020-12-23 09:39:30 PST
[Media in GPU Process][MSE] Media element does not fire "resize" event
Attachments
Patch
(3.79 KB, patch)
2020-12-23 09:45 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2020-12-23 09:45:13 PST
Created
attachment 416710
[details]
Patch
EWS
Comment 2
2020-12-23 12:55:57 PST
Committed
r271076
: <
https://trac.webkit.org/changeset/271076
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416710
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-12-23 12:56:17 PST
<
rdar://problem/72632902
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug