[Media in GPU Process][MSE] Media element does not fire "resize" event https://bugs.webkit.org/show_bug.cgi?id=220119

Reviewed by Eric Carlson.

Source/WebKit:

Implement `RemoteMediaPlayerProxy::mediaPlayerSizeChanged()` to forward the video
resize callback from MSE media player to web process.

No new tests, covered by existing failing layout test.

* GPUProcess/media/RemoteMediaPlayerProxy.cpp:
(WebKit::RemoteMediaPlayerProxy::mediaPlayerSizeChanged):
* GPUProcess/media/RemoteMediaPlayerProxy.h:

LayoutTests:

* gpu-process/TestExpectations:


Canonical link: https://commits.webkit.org/232673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271076 268f45cc-cd09-0410-ab3c-d52691b4dbfc